--- a/src/styles/_config.scss
+++ b/src/styles/_config.scss
@@ -1,7 +1,6 @@
 $website-width: 1280px;
-$main-color: #ffbc00;
-$light-color: #f2e9e4;
-$secondary-color: #c9ada7;
-$medium-color: #9a8c98;
-$third-color: #4a4e69;
-$dark-color: #22223b;
+$main-color: #FCA311;
+$light-color: #E4E4E4;
+$third-color: #8D8D8D;
+$medium-color: #14213D;
+$dark-color: #000000;
